--- a/index.html
+++ b/index.html
@@ -105,16 +105,46 @@
             "странных фраз, чтобы начать диалог с незнакомцем.",
             "способов испортить групповое фото.",
             "вещей, которые нельзя доверить бабушке.",
-            "слов, которые можно крикнуть и в лифте, и в суде."
+            "слов, которые можно крикнуть и в лифте, и в суде.",
+            "которые можно использовать как талисман удачи, но они смешные.",
+            "что нельзя сказать на собеседовании, но можно в постели.",
+            "которые могут быть подарком на день рождения ребёнка и взрослого одновременно.",
+            "что можно сказать начальнику только в шутку.",
+            "что нельзя класть в рюкзак, отправляясь в горы.",
+            "что можно услышать от бабушки, но было бы странно от подруги.",
+            "что ты бы не стал есть даже на спор.",
+            "что можно найти в сумочке у стервы из сериала.",
+            "что точно остановит разговор с незнакомцем.",
+            "что лучше не говорить в первый день знакомства.",
+            "что можно использовать как аргумент при споре с мамой.",
+            "что можно взять с собой на необитаемый остров, но это глупо.",
+            "что можно увидеть в офисе, но только если что-то не так.",
+            "что лучше промолчать после пары бокалов вина.",
+            "что можно сказать лучшему другу, но не его родителям.",
+            "что точно испортит романтический вечер.",
+            "что можно носить зимой, но не осенью.",
+            "что можно сказать собаке, но не кошке.",
+            "что можно найти в доме у фаната средневековья.",
+            "что можно услышать в спортзале, но только от новичков.",
+            "что можно использовать как оправдание опоздания, но никто не поверит.",
+            "что нельзя писать в официальной переписке.",
+            "что можно сказать, чтобы выиграть спор, но потерять лицо.",
+            "что можно использовать как лайфхак, но это опасно.",
+            "что можно увидеть в холодильнике человека, который не ест дома.",
+            "что можно сказать, чтобы всех рассмешить, но всё испортить.",
+            "что можно делать на работе, но только когда никого нет.",
+            "что можно использовать как имя для питомца, но не для ребёнка.",
+            "что можно найти в машине дедушки, но не сына.",
+            "что можно сказать, чтобы мгновенно прекратить разговор."
         ];
 
         let timerInterval;
-        let timeLeft = 20;
+        let timeLeft = 15;
         const alarm = document.getElementById('alarm');
 
         function startGame() {
             document.getElementById('question').textContent = 'Назови 3 вещи ' + questions[Math.floor(Math.random() * questions.length)] + '...';
-            timeLeft = 20;
+            timeLeft = 15;
             document.getElementById('timer').textContent = timeLeft;
             clearInterval(timerInterval);
             timerInterval = setInterval(updateTimer, 1000);
@@ -133,7 +163,9 @@
 
         function playAlarm() {
             if (alarm.readyState === 4) { // 4 означает, что аудио загружено
-                alarm.play().catch(error => {
+                alarm.play().then(() => {
+                    console.log('Звук успешно воспроизведён');
+                }).catch(error => {
                     console.error('Ошибка воспроизведения звука:', error);
                 });
             } else {
@@ -144,11 +176,20 @@
         // Проверка поддержки автовоспроизведения звука
         document.addEventListener('click', () => {
             alarm.play().then(() => {
-                console.log('Звук успешно воспроизведён');
+                console.log('Звук успешно воспроизведён после клика');
             }).catch(error => {
-                console.error('Ошибка воспроизведения звука:', error);
+                console.error('Ошибка воспроизведения звука после клика:', error);
             });
         }, { once: true });
+
+        // Проверка загрузки аудио
+        alarm.addEventListener('canplaythrough', () => {
+            console.log('Аудио загружено и готово к воспроизведению');
+        });
+
+        alarm.addEventListener('error', (event) => {
+            console.error('Ошибка загрузки аудио:', event.target.error.code);
+        });
     </script>
 </body>
 </html>
